--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
   "author": "Ian Deans",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.18.2",
     "columnify": "^1.5.4",
+    "cors": "^2.8.4",
+    "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "inquirer": "^3.3.0",
     "knex": "^0.13.0",
