Add nextjs client app and sessions table.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,7 +22,7 @@
         ],
         "linebreak-style": [
             "error",
-            "unix"
+            "windows"
         ],
         "no-console": 0,
         "quotes": [
