--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
+    "react-bootstrap": "^0.31.5",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {
