Migrate to database to postgres

--- a/package.json
+++ b/package.json
@@ -4,20 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "api:dev": "nodemon --exec npm run babel-node -- ./src/server/server.js",
     "babel-node": "babel-node --presets=env",
-    "db:create": "sqlite3 ./src/db/databases/tutor_homie.db && npm run dev-db:create && npm run test-db:create",
-    "db:drop": "del src/db/databases/*.db",
+    "db:create": "createdb dev.tutor_homie && createdb test.tutor_homie && createdb tutor_homie",
+    "db:drop": "dropdb dev.tutor_homie && dropdb test.tutor_homie && dropdb tutor_homie",
     "db:migrate:up": "knex migrate:latest --knexfile ./src/db/knexfile.js && npm run test-db:migrate:up",
     "db:migrate:down": "knex migrate:rollback --knexfile ./src/db/knexfile.js && npm run test-db:migrate:down",
     "db:migrate:make": "knex migrate:make --knexfile ./src/db/knexfile.js ",
     "db:seed": "knex seed:run --knexfile ./src/db/knexfile.js",
     "db:seed:make": "knex seed:make --knexfile ./src/db/knexfile.js",
-    "db:import:csv": "cd ./src/db/databases && sqlite3 dev.tutor_homie.db .mode csv ; sqlite3 dev.tutor_homie.db .import roster.csv students",
-    "dev-db:create": "sqlite3 ./src/db/databases/dev.tutor_homie.db",
-    "test-db:create": "sqlite3 ./src/db/databases/test.tutor_homie.db",
     "test-db:migrate:up": "NODE_ENV=test knex migrate:latest --knexfile ./src/db/knexfile.js",
     "test-db:migrate:down": "NODE_ENV=test knex migrate:rollback --knexfile ./src/db/knexfile.js",
-    "start:dev": "nodemon --exec npm run babel-node -- ./src/server/server.js",
     "test": "NODE_ENV=test ava",
     "cli": "babel-node ./cli/runCLI.js"
   },
@@ -34,6 +31,7 @@
     "moment": "^2.19.1",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
+    "pg": "^7.4.0",
     "react-bootstrap": "^0.31.5",
     "sqlite3": "^3.1.13"
   },
