--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "scripts": {
     "api:dev": "nodemon --exec npm run babel-node -- ./src/server/server.js",
     "babel-node": "babel-node --presets=env",
+    "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate:up && npm run db:seed",
     "db:create": "createdb dev.tutor_homie && createdb test.tutor_homie && createdb tutor_homie",
     "db:drop": "dropdb dev.tutor_homie && dropdb test.tutor_homie && dropdb tutor_homie",
-    "db:migrate:up": "knex migrate:latest --knexfile ./src/db/knexfile.js && npm run test-db:migrate:up",
-    "db:migrate:down": "knex migrate:rollback --knexfile ./src/db/knexfile.js && npm run test-db:migrate:down",
+    "db:migrate:up": "knex migrate:latest --knexfile ./src/db/knexfile.js",
+    "db:migrate:down": "knex migrate:rollback --knexfile ./src/db/knexfile.js",
     "db:migrate:make": "knex migrate:make --knexfile ./src/db/knexfile.js ",
     "db:seed": "knex seed:run --knexfile ./src/db/knexfile.js",
     "db:seed:make": "knex seed:make --knexfile ./src/db/knexfile.js",
@@ -28,7 +29,7 @@
     "express": "^4.16.2",
     "inquirer": "^3.3.0",
     "knex": "^0.13.0",
-    "moment": "^2.19.1",
+    "moment": "^2.19.4",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
     "pg": "^7.4.0",
