Add Modal for displaying details

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,7 @@
 {
     "env": {
+        "browser": true,
+        "commonjs": true,
         "es6": true,
         "node": true
     },
@@ -16,6 +18,13 @@
         "react"
     ],
     "rules": {
+        "no-const-assign": "warn",
+        "no-this-before-super": "warn",
+        "no-undef": "warn",
+        "no-unreachable": "warn",
+        "no-unused-vars": "warn",
+        "constructor-super": "warn",
+        "valid-typeof": "warn",    
         "indent": [
             "error",
             2
