Remove nextjs folder from git tree | add entries to .gitignore

--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:api": "nodemon --exec npm run babel-node -- ./src/server/server.js",
+    "start": "npm run babel-node -- ./src/server/server.js",
     "babel-node": "babel-node --presets=env",
-    "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate:up && npm run db:seed",
-    "db:create": "createdb dev.tutor_homie && createdb test.tutor_homie && createdb tutor_homie",
-    "db:drop": "dropdb dev.tutor_homie && dropdb test.tutor_homie && dropdb tutor_homie",
+    "db:setup": "createdb tutor_homie && knex migrate:latest --knexfile ./src/db/knexfile.js && knex seed:run --knexfile ./src/db/knexfile.js",
+    "db:reset:all": "npm run db:drop && npm run db:create && npm run db:migrate:up && npm run db:seed",
+    "db:create:all": "createdb dev.tutor_homie && createdb test.tutor_homie && createdb tutor_homie",
+    "db:drop:all": "dropdb dev.tutor_homie && dropdb test.tutor_homie && dropdb tutor_homie",
     "db:migrate:up": "knex migrate:latest --knexfile ./src/db/knexfile.js",
     "db:migrate:down": "knex migrate:rollback --knexfile ./src/db/knexfile.js",
     "db:migrate:make": "knex migrate:make --knexfile ./src/db/knexfile.js ",
@@ -54,6 +55,7 @@
     "nodemon": "^1.12.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-proptypes": "^1.0.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
   },
