add entries to .gitignoe & remove files from git tree

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,14 @@
-node_modules
-scratch
-src/db/databases/*.db
 .env
-nextjs/.next
-package-lock.json
-yarn.lock
-yarn-error.log
-src/db/seeds
-src/server/public/app_bundle.js
 .idea
 *.log
+.vs
+.vscode
+nextjs/.next
+node_modules
+package-lock.json
+scratch
+src/db/databases/*.db
+src/db/seeds
+src/server/public/app_bundle.js
+yarn.lock
+yarn-error.log
