--- a/package.json
+++ b/package.json
@@ -4,26 +4,27 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:api": "nodemon --exec npm run babel-node -- ./src/server/server.js",
+    "start": "npm run babel-node -- ./src/server/server.js",
     "babel-node": "babel-node --presets=env",
+    "test": "NODE_ENV=test ava",
+    "dev": "nodemon --exec npm run babel-node -- ./src/server/server.js",
+    "db:create": "createdb test.tutor_homie && createdb tutor_homie",
+    "db:drop": "dropdb test.tutor_homie && dropdb tutor_homie",
+    "dev-db:create":"createdb dev.tutor_homie",
+    "dev-db:drop":"dropdb dev.tutor_homie",
     "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate:up && npm run db:seed",
-    "db:create": "createdb dev.tutor_homie && createdb test.tutor_homie && createdb tutor_homie",
-    "db:drop": "dropdb dev.tutor_homie && dropdb test.tutor_homie && dropdb tutor_homie",
-    "db:migrate:up": "knex migrate:latest --knexfile ./src/db/knexfile.js",
-    "db:migrate:down": "knex migrate:rollback --knexfile ./src/db/knexfile.js",
-    "db:migrate:make": "knex migrate:make --knexfile ./src/db/knexfile.js ",
-    "db:seed": "knex seed:run --knexfile ./src/db/knexfile.js",
-    "db:seed:make": "knex seed:make --knexfile ./src/db/knexfile.js",
+    "db:migrate:up": "knex migrate:latest --knexfile ./src/db/knexfile.js && npm run test-db:migrate:up",
+    "db:migrate:down": "knex migrate:rollback --knexfile ./src/db/knexfile.js && npm run test-db:migrate:down",
     "test-db:migrate:up": "NODE_ENV=test knex migrate:latest --knexfile ./src/db/knexfile.js",
     "test-db:migrate:down": "NODE_ENV=test knex migrate:rollback --knexfile ./src/db/knexfile.js",
-    "test": "NODE_ENV=test ava",
-    "cli": "babel-node ./cli/runCLI.js"
+    "db:migrate:make": "knex migrate:make --knexfile ./src/db/knexfile.js",
+    "db:seed": "knex seed:run --knexfile ./src/db/knexfile.js",
+    "db:seed:make": "knex seed:make --knexfile ./src/db/knexfile.js"
   },
   "author": "Ian Deans",
   "license": "MIT",
   "dependencies": {
     "body-parser": "^1.18.2",
-    "columnify": "^1.5.4",
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
@@ -32,10 +33,7 @@
     "moment": "^2.19.4",
     "morgan": "^1.9.0",
     "path": "^0.12.7",
-    "pg": "^7.4.0",
-    "react-bootstrap": "^0.31.5",
-    "react-fontawesome": "^1.6.1",
-    "react-toolbox": "^2.0.0-beta.12"
+    "pg": "^7.4.0"
   },
   "devDependencies": {
     "ava": "^0.23.0",
@@ -47,13 +45,17 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
+    "columnify": "^1.5.4",
     "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
     "html-webpack-plugin": "^2.30.1",
     "knex-csv-seeder": "^0.4.1",
     "nodemon": "^1.12.1",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
+    "react-fontawesome": "^1.6.1",
+    "react-toolbox": "^2.0.0-beta.12",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
   },
