--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
         ],
         "linebreak-style": [
             "error",
-            "windows"
+            "unix"
         ],
         "no-console": 0,
         "quotes": [
