Delete files, folders, and dependencies from Knex

--- a/package.json
+++ b/package.json
@@ -8,18 +8,6 @@
     "babel-node": "babel-node --presets=env",
     "test": "NODE_ENV=test ava",
     "dev": "nodemon --exec npm run babel-node -- ./src/server/server.js",
-    "db:create": "createdb test.tutor_homie && createdb tutor_homie",
-    "db:drop": "dropdb test.tutor_homie && dropdb tutor_homie",
-    "dev-db:create": "createdb dev.tutor_homie",
-    "dev-db:drop": "dropdb dev.tutor_homie",
-    "db:reset": "npm run db:drop && npm run db:create && npm run db:migrate:up && npm run db:seed",
-    "db:migrate:up": "knex migrate:latest --knexfile ./src/db/knexfile.js && npm run test-db:migrate:up",
-    "db:migrate:down": "knex migrate:rollback --knexfile ./src/db/knexfile.js && npm run test-db:migrate:down",
-    "test-db:migrate:up": "NODE_ENV=test knex migrate:latest --knexfile ./src/db/knexfile.js",
-    "test-db:migrate:down": "NODE_ENV=test knex migrate:rollback --knexfile ./src/db/knexfile.js",
-    "db:migrate:make": "knex migrate:make --knexfile ./src/db/knexfile.js",
-    "db:seed": "knex seed:run --knexfile ./src/db/knexfile.js",
-    "db:seed:make": "knex seed:make --knexfile ./src/db/knexfile.js",
     "webpack": "webpack"
   },
   "author": "Ian Deans",
@@ -29,12 +17,11 @@
     "cors": "^2.8.4",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
-    "inquirer": "^3.3.0",
     "knex": "^0.13.0",
     "moment": "^2.19.4",
+    "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
-    "path": "^0.12.7",
-    "pg": "^7.4.0"
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "ava": "^0.23.0",
@@ -46,7 +33,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "babel-register": "^6.26.0",
-    "columnify": "^1.5.4",
     "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
     "html-webpack-plugin": "^2.30.1",
