Refactor table to on display students.

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "NODE_ENV=test ava",
     "dev": "nodemon --exec npm run babel-node -- ./src/server/server.js",
     "webpack": "webpack",
+    "webpack:watch": "webpack --watch",
     "seedTest": "babel-node ./src/db/seeds/seedDB.js"
   },
   "author": "Ian Deans",
